--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
     "next": "10.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "yup": "^0.29.3"
   }
 }
