--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "yup": "^0.29.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.0",
+    "@types/node": "^14.14.7",
+    "@types/nprogress": "^0.2.0",
+    "@types/yup": "^0.29.9",
+    "typescript": "^4.0.5"
   }
 }
